--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -1,33 +1,29 @@
 {
   "main": {
-    "id": "d7ea5523de74e680",
+    "id": "b009b66fbdbc027c",
     "type": "split",
     "children": [
       {
-        "id": "48f24894b85de385",
+        "id": "a40794cb492ce33a",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Hello World.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
     "direction": "vertical"
   },
   "left": {
-    "id": "ea5d8380a51d8158",
+    "id": "facc9303b5540e27",
     "type": "split",
     "children": [
       {
-        "id": "02f0e036cb25e64b",
+        "id": "9bd069701dddffaf",
         "type": "tabs",
         "children": [
           {
-            "id": "cd387058c441d2d1",
+            "id": "bbd00430ced9ec17",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -35,7 +31,7 @@
             }
           },
           {
-            "id": "e6fc0c1c4d15739a",
+            "id": "9e5f61d4556268b7",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -50,7 +46,7 @@
             }
           },
           {
-            "id": "0cfc0ae0ac4147ce",
+            "id": "a8864da897823fa6",
             "type": "leaf",
             "state": {
               "type": "starred",
@@ -64,20 +60,19 @@
     "width": 300
   },
   "right": {
-    "id": "a78288c44b9a284e",
+    "id": "8516fc868bbb61dd",
     "type": "split",
     "children": [
       {
-        "id": "db7a93e4b4b77d44",
+        "id": "44b587c8a3d304c8",
         "type": "tabs",
         "children": [
           {
-            "id": "f04448794ba422be",
+            "id": "ce4ea0c44879b050",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Hello World.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,19 +84,18 @@
             }
           },
           {
-            "id": "85708f71ecddb460",
+            "id": "7056fa4af71eac0d",
             "type": "leaf",
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Hello World.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
             }
           },
           {
-            "id": "a0ed1156e02c7f01",
+            "id": "8e9fc2d675102f64",
             "type": "leaf",
             "state": {
               "type": "tag",
@@ -112,13 +106,11 @@
             }
           },
           {
-            "id": "fee9fc5fd8f8e2b2",
+            "id": "af2e414d1401fb91",
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "Hello World.md"
-              }
+              "state": {}
             }
           }
         ]
@@ -128,6 +120,8 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "48f24894b85de385",
-  "lastOpenFiles": []
+  "active": "a40794cb492ce33a",
+  "lastOpenFiles": [
+    "Notes 2022-2023/Hello World.md"
+  ]
 }
